--- a/tarot_cards/templates/tarot_cards/list_cards.html
+++ b/tarot_cards/templates/tarot_cards/list_cards.html
@@ -11,7 +11,7 @@
 
         
     <div class="col">
-      <div class="card" style="border-radius: 15px;box-shadow: 20px 20px 10px grey">
+      <div class="card" style="border-radius: 15px;box-shadow: 20px 20px 10px white">
         <center><h5 class="card-title">{{card.title}}</h5><h6>{{card.tag}}</h6></center>
         <img src="{{card.src}}" class="card-img-top" alt="...">
         <div class="card-body">
